--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "require": {
         "behat/behat":           "2.4@stable",
+        "behat/mink": "1.4@stable",
         "behat/mink-extension":  "*",
-        "behat/mink-goutte-driver":     "*",
+         "behat/mink-goutte-driver":     "*",
         "behat/mink-selenium2-driver":  "*",
         "behat/mink-goutte-driver": "~1.0"
     },
