--- a/behat.yml
+++ b/behat.yml
@@ -1,8 +1,8 @@
 default:
   filters:
-    tags:      "@new"
+    tags:      "@seo"
   context:
-    class:  'InheritedFeatureContext'
+    class:  'FeatureContext'
 
   extensions:
     Behat\MinkExtension\Extension:
