--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "behat/mink-extension":  "*",
          "behat/mink-goutte-driver":     "*",
         "behat/mink-selenium2-driver":  "*",
-        "behat/mink-goutte-driver": "~1.0"
+        "behat/mink-goutte-driver": "~1.0",
+        "phpunit/phpunit": "4.3.*"
     },
     "minimum-stability": "dev",
     "config": {
